k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefix-server
spec:
  replicas: 2

  template:
    spec:
      containers:
        - name: prefix-server
          image: ghcr.io/zazuko/prefix-server
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsUser: 65534
            runAsGroup: 65534

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http

          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http

          resources:
            requests:
              memory: "500Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "50m"

        - name: varnish
          image: docker.io/zazukoians/varnish:5.2.1
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: varnish-config-volume
              mountPath: /config

          ports:
            - name: cache
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
            limits:
              memory: "150Mi"
              cpu: "50m"

      volumes:
        - name: varnish-config-volume
          configMap:
            name: varnish-config

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            # This makes sure the pods are not all scheduled on the same node
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchLabels: {}
                topologyKey: "kubernetes.io/hostname"
