k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perfix-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: cache
      protocol: TCP
      name: http
