k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefix-server
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    external-dns.alpha.kubernetes.io/hostname: prefix-zazuko-com.zazuko.net
spec:
  tls:
    - secretName: prefix-server-cert
      hosts:
        - prefix.zazuko.com
  rules:
    - host: prefix.zazuko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: perfix-server
                port:
                  name: http
